--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,50 @@
 Package: lncGSEA
 Type: Package
-Title: What the Package Does (Title Case)
+Title: An R Package to Infer lncRNA Associated Pathways from Large-scale Cancer Transcriptome Sequencing Data
 Version: 0.1.0
-Author: Who wrote it
-Maintainer: The package maintainer <yourself@somewhere.net>
-Description: More about what it does (maybe more than one line)
-    Use four spaces when indenting paragraphs within the Description.
-License: What license is it under?
+Author@R: 
+     c(person(given = "Yanan",
+           family = "Ren",
+           role = c("aut", "cre"),
+           email = "renxx275@umn.edu"),
+       person(given = "Tingyou",
+           family = "Wang",
+           role = "aut",
+           email = "tywang@umn.edu"),
+       person(given = "Leah C.",
+           family = "Anderton",
+           role = "aut",
+           email = "leahcanderton@cedarville.edu"),
+       person(given = "Qi",
+           family = "Cao",
+           role = "aut",
+           email = "qi.cao@northwestern.edu"
+           ),
+       person(given = "Rendong",
+           family = "Yang",
+           role = "aut",
+           email = "yang4414@umn.edu"
+           )
+           )
+Maintainer: Yanan Ren <renxx275@umn.edu>
+Description: lncGSEA, a new tool to link gene signatures with a lncRNA expression
+in tumor patient samples from the TCGA study. It is capable to identify enriched pathways
+regulated by lncRNAs in human cancers.
+
+License: MIT + file LICENCE
 Encoding: UTF-8
 LazyData: true
+RoxygenNote: 7.1.1
+Imports:
+   data.table (>= 1.12.8),
+   dplyr (>= 1.0.0),
+   stringr (>= 1.4.0),
+   tidyr (>= 1.1.0),
+   tibble (>= 3.0.1),
+   fgsea (>= 1.10.1),
+   ggplot2 (>= 3.3.2),
+   RColorBrewer (>= 1.1-2),
+   ggrepel (>=0.8.2)
+Suggests: 
+    knitr (>=1.29),
+    rmarkdown (>= 2.3)
