--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,7 +2,7 @@ Package: lncGSEA
 Type: Package
 Title: An R Package to Infer lncRNA Associated Pathways from Large-scale Cancer Transcriptome Sequencing Data
 Version: 0.1.0
-Author@R: 
+Author: 
      c(person(given = "Yanan",
            family = "Ren",
            role = c("aut", "cre"),
@@ -27,14 +27,7 @@ Author@R:
            )
            )
 Maintainer: Yanan Ren <renxx275@umn.edu>
-Description: lncGSEA, a new tool to link gene signatures with a lncRNA expression
-in tumor patient samples from the TCGA study. It is capable to identify enriched pathways
-regulated by lncRNAs in human cancers.
-
-License: MIT + file LICENCE
-Encoding: UTF-8
-LazyData: true
-RoxygenNote: 7.1.1
+Description: lncGSEA, a new tool to link gene signatures with a lncRNA expression in tumor patient samples from the TCGA study. It is capable to identify enriched pathways regulated by lncRNAs in human cancers.
 Imports:
    data.table (>= 1.12.8),
    dplyr (>= 1.0.0),
@@ -44,7 +37,13 @@ Imports:
    fgsea (>= 1.10.1),
    ggplot2 (>= 3.3.2),
    RColorBrewer (>= 1.1-2),
-   ggrepel (>=0.8.2)
+   ggrepel (>= 0.8.2)
 Suggests: 
-    knitr (>=1.29),
-    rmarkdown (>= 2.3)
+    knitr,
+    rmarkdown,
+    testthat
+License: MIT + file LICENCE
+Encoding: UTF-8
+LazyData: true
+RoxygenNote: 7.1.1
+VignetteBuilder: knitr
