--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -38,6 +38,7 @@ Imports:
    ggplot2 (>= 3.3.2),
    RColorBrewer (>= 1.1-2),
    ggrepel (>= 0.8.2)
+   R.utils (>= 2.9.2)
 Suggests: 
     knitr,
     rmarkdown,
