--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -28,6 +28,7 @@ Author:
            )
 Maintainer: Yanan Ren <renxx275@umn.edu>
 Description: lncGSEA, a new tool to link gene signatures with a lncRNA expression in tumor patient samples from the TCGA study. It is capable to identify enriched pathways regulated by lncRNAs in human cancers.
+Depends: R (>= 3.1.0), fgsea
 Imports:
    data.table (>= 1.12.8),
    dplyr (>= 1.0.0),
