--- a/appveyor.yml
+++ b/appveyor.yml
@@ -24,6 +24,9 @@ environment:
   # R_REMOTES_STANDALONE: true
 
 # Adapt as necessary starting from here
+R_VERSION: stable
+
+R_VERSION: patched
 
 build_script:
   - travis-tool.sh install_deps
