--- a/appveyor.yml
+++ b/appveyor.yml
@@ -32,7 +32,7 @@ environment:
 
 
 build_script:
-  - travis-tool.sh install_deps
+  - travis-tool.sh install_deps fgsea
 
 test_script:
   - travis-tool.sh run_tests
