add more functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,3 +6,6 @@ import(dplyr)
 import(R.utils)
 import(bit64)
 import(fgsea)
+importFrom("grDevices", "dev.off", "pdf")
+importFrom("stats", "aggregate", "median", "na.omit")
+importFrom("utils", "read.delim", "write.table")
